--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 body {
-    font-family: 'Arial', sans-serif;
+    background: url('https://noithatbinhminh.com.vn/wp-content/uploads/2022/12/background-xanh-duong-20.jpg') no-repeat center center fixed;
+    background-size: cover;
+    font-family: Arial, sans-serif; /* Chọn font cho trang web */
     margin: 0;
     padding: 0;
-    background-size: cover;
-    color: #333;
+   
 }
 
 header {
